fixed references to js scripts

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 
-	<script src="js/p5/p5.min.js"></script>
-	<script src="js/p5/addons/p5.dom.js"></script>
-	<script src="js/p5.vr/p5.vr.js"></script>
+	<script src="js/p5.js"></script>
+	<script src="js/p5.dom.js"></script>
+	<script src="js/p5.vr.js"></script>
 </head>
 
 <body>
