--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 
 	<div id="container">
 		<header class="container">
-			<h1 class="index">GENDER CONSTELLATIONS</h1>
-			<p class="index">"Gender isn't a spectrum, it's more of a constellation".</p>
+			<h1 class="index">IDENTITY CONSTELLATION</h1>
+			<p class="index">
+				When people think of things like gender identity, they often think of a spectrum.
+				But really, your identity is more of a constellation, made up of a number of stars that can 
+				exist anywhere in space represent all the things you are. They all connect together to create
+				your identity.
+			</p>
 		</header>
 		<form class="container">
 			<a class="btn" href="intro.html" id="enterbtn">enter</a>
