--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				When people think of things like gender identity, they often think of a spectrum.
 				But really, your identity is more of a constellation, made up of a number of stars that can 
 				exist anywhere in space represent all the things you are. They all connect together to create
-				your identity.
+				your unique identity, and those connections between one star to another can stay stable, or
+				constantly shift. 
 			</p>
 		</header>
 		<form class="container">
